--- a/css/style2.css
+++ b/css/style2.css
@@ -27,14 +27,10 @@ h1 {
     left: 1200px;
 }
 
-div.dice{
+img.dice{
+    width: 80px;
+    height: 80px;
     display: block;
-	width:32px;
-	background:#F5F5F5;
-	border:#999 1px solid;
-	padding:10px;
-	font-size:24px;
-	text-align:center;
     margin:5px;
     position: relative;
     left: 920px;
