--- a/css/style1.css
+++ b/css/style1.css
@@ -40,28 +40,45 @@ select {
 
 #blue{
     background-color: dodgerblue;
-    width: 25px; height: 25px;
-    margin: 1px;
-    display: inline-block;
 }
 #green{
     background-color: forestgreen;
-    width: 25px; height: 25px;
-    margin: 1px;
-    display: inline-block;
 }
 #pink{
     background-color: palevioletred;
-    width: 25px; height: 25px;
-    margin: 1px;
-    display: inline-block;
 }
 #yellow{
     background-color: gold;
-    width: 25px; height: 25px;
-    margin: 1px;
-    display: inline-block;
 }
 
+.container {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    margin: 10px;
+  }
+  
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+  }
 
-
+  .checkmark:hover{
+      border: white 1px solid;
+  }
+  
+  .container input:checked ~ .checkmark {
+    border: black 1px solid;
+  }
+ 
+  
