--- a/css/style2.css
+++ b/css/style2.css
@@ -61,3 +61,37 @@ img.dice{
     left: 780px;
     bottom: -25px;
 }
+
+#p1won{
+    text-align: center;
+    width: 200px;
+    height: 150px;
+    background-color: #cacaca;
+    color: #333333;
+    border:rgb(46, 46, 46) solid 10px;
+    border-radius: 5px;
+    position: absolute;
+    top: 300px;
+    right: 750px;
+}
+#p2won{
+    visibility: hidden;
+    text-align: center;
+    width: 200px;
+    height: 100px;
+    background-color: #cacaca;
+    color: #333333;
+    border: rgb(46, 46, 46) solid 10px;
+    border-radius: 5px;
+    position: absolute;
+    top: 300px;
+    right: 750px;
+}
+
+.playagainbtn{
+    font-size: large;
+    padding: 10px;
+    position: absolute;
+    top: 100px;
+    left: 20px;
+}
