--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,5 @@
 body {
     margin:10px;
-    margin-right: 1200px;
     font-size: x-large;
     color: #cacaca;
     background-color: #333333;
@@ -8,14 +7,13 @@ body {
 }
 
 h1 {
-    position: relative;
-    left:800px;
+    text-align: center;
 }
 
 .p1 {
     position: relative;
-    top: 108px;
-    left: 600px;
+    top: 100px;
+    left: 500px;
 }
 
 #p1name {
@@ -24,7 +22,8 @@ h1 {
 
 .p2 {
     position: relative;
-    left: 1200px;
+    left: 940px;
+    top: -5px;
 }
 
 img.dice{
@@ -33,20 +32,20 @@ img.dice{
     display: block;
     margin:5px;
     position: relative;
-    left: 920px;
+    right: -690px;
+    bottom: 30px;
 }
 
 #rollbtn{
     position: relative;
-    left: 900px;
+    left: 720px;
 }
 #getscorebtn{
     position: relative;
-    left: 920px;
+    left: 750px;
 }
 #score{
-    position: relative;
-    left: 960px;
+    text-align: center;
 }
 
 #dicegif{
@@ -57,13 +56,11 @@ img.dice{
 }
 
 #winscore{
-    position: relative;
-    left: 780px;
-    bottom: -25px;
+    text-align: center;
 }
 
 #p1won{
-    visibility: hidden;
+    display: none;
     text-align: center;
     width: 200px;
     height: 150px;
@@ -72,29 +69,28 @@ img.dice{
     border:rgb(46, 46, 46) solid 10px;
     border-radius: 5px;
     position: absolute;
-    top: 230px;
-    right: 842px;
+    bottom: 400px;
+    left: 685px;
 }
 #p2won{
-    visibility: hidden;
+    display: none;
     text-align: center;
     width: 200px;
-    height: 100px;
+    height: 150px;
     background-color: #cacaca;
     color: #333333;
     border: rgb(46, 46, 46) solid 10px;
     border-radius: 5px;
     position: absolute;
-    top: 230px;
-    right: 842px;
+    bottom: 400px;
+    left: 685px;
 }
 
 .playagainbtn{
     font-size: large;
     padding: 10px;
-    position: absolute;
-    top: 100px;
-    left: 20px;
+    position: relative;
+    top: -20px;
 }
 
 
